--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Multiplayer Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
@@ -9,44 +10,36 @@
     <script src="p5.play.js"></script>
 
 
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyBrsGteoHw_NeJSvNd1bXpt1RWoIg45HIQ",
-    authDomain: "c40teach.firebaseapp.com",
-    databaseURL: "https://c40teach-default-rtdb.firebaseio.com",
-    projectId: "c40teach",
-    storageBucket: "c40teach.appspot.com",
-    messagingSenderId: "810441052488",
-    appId: "1:810441052488:web:c4f86835bfc5b1082a237d"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
     <script>
-      //Your web app's Firebase configuration
-      
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
+        var firebaseConfig = {
+            apiKey: "AIzaSyD99WEPNtDSfli2GB3Wsnh4R7kfabW1hJk",
+            authDomain: "class-37-d6cea.firebaseapp.com",
+            projectId: "class-37-d6cea",
+            storageBucket: "class-37-d6cea.appspot.com",
+            messagingSenderId: "633853077926",
+            appId: "1:633853077926:web:58cda5989bd74d0d93c767"
+        };
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);
     </script>
+
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
     <script src="js/Game.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
     <script src="sketch.js"></script>
-  </body>
+</body>
+
 </html>
